edit formatted and loop.index removed

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,53 +5,45 @@
 <a class=" btn btn-primary" href="/add_blog">Add Blog </a>
 <br>
 <hr>
-    {% for blog in blogs|sort(reverse=true,attribute='_id') %}
-      
-      {% if loop.index % 2 !=0 %}
-
+{% for blog in blogs|sort(reverse=true,attribute='_id') %}
+{% if loop.index % 2 !=0 %}
 <div class="card mb-3" style="max-width: 1000px;">
-  <div class="row no-gutters">
-    <div class="col-md-4">
-      <img src="{{ blog.img_src }}" class="card-img" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-      <h5 class="card-title"><a href="/blog/{{ blog._id }}">{{ loop.index }}. {{ blog.title }}</a></h5>
-        <p class="card-text">{{ blog.body | safe|truncate(200,True)  }}</p>
-        <p class="card-text">{{ blog.user_name }}</p>
-        <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
-        <p class="card-text"><small class="text-muted">{{blog._id}}</small></p>
-        {% if session.logged_in %}
-        {% endif %}
+   <div class="row no-gutters">
+      <div class="col-md-4">
+         <img src="{{ blog.img_src }}" class="card-img" alt="...">
       </div>
-    </div>
-  </div>
-  </div>
-  {% else %}
-<div class="card mb-3" style="max-width: 1000px;">
-  <div class="row no-gutters">
-    
-    <div class="col-md-8">
-      <div class="card-body">
-       <h5 class="card-title"><a href="/blog/{{ blog._id }}">{{ loop.index }}. {{ blog.title }}</a></h5>
-        <p class="card-text">{{ blog.body | safe |truncate(200,True) }}</p>
-        <p class="card-text">{{ blog.user_name }}</p>
-        <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
-        <p class="card-text"><small class="text-muted">{{blog._id}}</small></p>
-        {% if session.logged_in %}
-        {% endif %}
+      <div class="col-md-8">
+         <div class="card-body">
+            <h5 class="card-title"><a href="/blog/{{ blog._id }}">{{ blog.title }}</a></h5>
+            <p class="card-text">{{ blog.body | safe|truncate(200,True)  }}</p>
+            <p class="card-text">{{ blog.user_name }}</p>
+            <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
+            <p class="card-text"><small class="text-muted">{{blog._id}}</small></p>
+            {% if session.logged_in %}
+            {% endif %}
+         </div>
       </div>
-      
-    </div>
-    <div class="col-md-4">
-      <img src="{{ blog.img_src }}" class="card-img" alt="...">
-    </div>
-  </div>
+   </div>
 </div>
-  {% endif %}
-
-
-
+{% else %}
+<div class="card mb-3" style="max-width: 1000px;">
+   <div class="row no-gutters">
+      <div class="col-md-8">
+         <div class="card-body">
+            <h5 class="card-title"><a href="/blog/{{ blog._id }}">{{ blog.title }}</a></h5>
+            <p class="card-text">{{ blog.body | safe |truncate(200,True) }}</p>
+            <p class="card-text">{{ blog.user_name }}</p>
+            <p class="card-text"><small class="text-muted">{{blog.date}}</small></p>
+            <p class="card-text"><small class="text-muted">{{blog._id}}</small></p>
+            {% if session.logged_in %}
+            {% endif %}
+         </div>
+      </div>
+      <div class="col-md-4">
+         <img src="{{ blog.img_src }}" class="card-img" alt="...">
+      </div>
+   </div>
+</div>
+{% endif %}
 {% endfor %}
-
 {% endblock %}
