--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
    <body>
    <!--HEADER SECTION-->
       <header class="header">
-         <h1 class="header-title">The Daily Blog</h1>
+         <h1 class="header-title">The Daily Commute Blog</h1>
       </header>
     <!--NAVIGATION-->
       <nav class="navbar navbar-expand-md navbar-dark bg-primary">
