--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,9 +1,12 @@
-html, body {
+html, body{
     width: 100%;
     height: 100%;
     font-family: 'Roboto', sans-serif;
     color:#000;
 }
+
+
+
 @media screen and (max-width: 1000px) {
  .h2, h2,  h1#title,p{
     width:80%;
@@ -79,7 +82,7 @@ html, body {
 @media screen and (min-width: 1200px) {
       
   
-    div #section-center.column{
+    section #section-center.column{
       width:80%;
   }
     div.column{
@@ -104,6 +107,9 @@ html, body {
        padding-left: 1px;
       
    }
+    section #section-center.column{
+      width:100%;
+  }
    html,body{
         font-size: 0.8rem;
    }
@@ -115,6 +121,12 @@ html, body {
        margin: 0 0 10px 0;
        padding-bottom: 50px;
    }
+
+   aside #rhs-aside{
+       display: none;
+   }
+
+}
    
 }
 @media screen and (min-width: 700px) {
@@ -136,7 +148,6 @@ html, body {
    }
    
 }
-@media screen and (min-width: 768px) {
 
    
 }@media screen and (min-width: 1000px) {
@@ -166,9 +177,7 @@ header{
     padding: 20px;
     
 }
-#hero-welcome{
-    background-image: linear-gradient(to bottom right, #f4dada,#beebe9);
-}
+
 h1{
     text-align: center;
 }
@@ -190,10 +199,7 @@ aside #rhs-aside.column{
     float: left;
    
 }
-#hero-welcome{
-    text-align: center;
-    height: 1000px;
-}
+
 
 
 
