remove div that was causing probs

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,6 @@
 {% extends 'base.html'%}
 {% block content %}
 
-<div id="hero-welcome" class="" style="color:black;">
-    <h2>{{page_title}}</h2>
-    <hr>
-    <p>Screaming into the void </p>
-    <hr>
-    <p>Bringing you news from around the Globe that you should be paying attention to.</p>
-    <hr>
-    <p>News that will put you in a better place to act.</p>
-    <hr>
-</div>
+<div class="home-bg"></div>
+
 {% endblock %}
