--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,221 +1,94 @@
-html, body{
+html{
+    width: 100%;
+    height: 100%;
+}
+body{
     width: 100%;
     height: 100%;
     font-family: 'Roboto', sans-serif;
     color:#000;
-}
-
-
-
-@media screen and (max-width: 1000px) {
- .h2, h2,  h1#title,p{
-    width:80%;
-    text-align: center;
-    padding: 0 0 0 2px;
-    margin: auto;
- }
- form#users-signup.signup,form#users-login.login,
- form#add_blog.add_blog,form#edit_blog.edit_blog{
-     margin: auto;
-     padding: 0 0 0 2px;
-     width:80%;
- }
-
-   a.btn.btn-primary{
-       margin-left: 10%;
-   }
-
-}
-
-@media screen and (max-width: 1000px) {
-   div.row{
-       width:100%;
-       margin: 0 0 0 0;
-       padding-left: 20%;
-   }
-  #lhs-aside{
-      display:none;
-  }
-  #rhs-aside{
-      display:none;
-  }
-  img.card-img{
-      display: none;
-  }
-  section #section-center.column{
-      width:100%;
-      margin: 0 0 0 200px;
-  }
-  div.column{
-      width:100%;
-  }
-  .crop-text2{
-      display: none;
-  }
-  
- 
-}
-
-@media screen and (min-width: 1000px) {
-     body{
-        font-size: 100%;
-   }
- 
-  section #section-center.column{
-      width:90%;
-  }
-  .crop-text2{
-      display: none;
-  }
-   p{
-      width:80%;
-      margin: auto;
-  }
-  a.btn.btn-primary{
-       margin-left: 35%;
-   }
-   img#img_src.card-img{
-       margin-left: 30%;
-   }
-   
-}
-@media screen and (min-width: 1200px) {
-      
-  
-    section #section-center.column{
-      width:80%;
-  }
-    div.column{
-        width:90%;
-    }
-    div.row{
-    width:90%;
-    }
-
-   .h2, h2{
-    width:80%;
-    text-align: center;
-    padding: 0 0 0 2px;
-    margin: auto;
- }
- 
-
-}
-@media screen and (min-width: 300px) {
-    div.row{
-       width:100%;
-       padding-left: 1px;
-      
-   }
-    section #section-center.column{
-      width:100%;
-  }
-   html,body{
-        font-size: 0.8rem;
-   }
-
-   div#blogs.card.mb-3{
-       padding-bottom: 10px;
-   }
-   div.card-body{
-       margin: 0 0 10px 0;
-       padding-bottom: 50px;
-   }
-
-   aside #rhs-aside{
-       display: none;
-   }
-
-}
-   
-}
-@media screen and (min-width: 700px) {
-    div.row{
-       width:100%;
-       padding-left: 1px;
-      
-   }
-   html,body{
-        font-size: 0.8rem;
-   }
-
-   div#blogs.card.mb-3{
-       padding-bottom: 10px;
-   }
-   div.card-body{
-       margin: 0 0 10px 0;
-       padding-bottom: 50px;
-   }
-   
-}
-
-   
-}@media screen and (min-width: 1000px) {
-
-    html,body{
-        font-size: 1rem;
-   }
-}
-@media screen and (min-width: 1800px) {
-
-   html,body{
-        font-size: 1.2rem;
-   }
-   
-}
-hr{
-    width:80%;
-}
-
-
-
-.bg-primary{
-    background-color: #79bac1!important;
-}
-header{
-    background-color: #f1f3f4;
-    padding: 20px;
+    background-image: linear-gradient(to bottom right,#d7fffd, #a1e6e3);
     
 }
 
-h1{
-    text-align: center;
+nav.navbar.navbar-expand-xl.navbar-dark.bg-primary{
+    
 }
-#lhs-aside{
-    background-color: #f1f3f4;
-    float: left;
-    width: 16%;
-  
+@media only screen and (max-width: 500px) {
+    div #footer.row{
+            display: none;
+    }
 }
-section #section-center{
-    float: left;
-    width: 60%;
-    padding: 15px;
-    text-align: center;
-    background-color: #beebe9;
+
+@media only screen and (max-width: 1000px) {
+  div #section-center.col-8{
+      margin: auto;
+  }
+  form #edit_blog.edit_blog{
+      text-align: center;
+  }
 }
-aside #rhs-aside.column{
-    background-color: o#f1f3f4;
-    float: left;
+
+@media only screen and (min-width: 1000px) {
+  div #section-center.col-8{
+      margin: auto;
+      padding-left: 10%;
+  }
+  form #edit_blog.edit_blog{
+      text-align: center;
+  }
+}
+div #rhs-aside{
+    padding-top: 10%;
+}
+
+h1.header-title{
+    margin: auto;
+}
+#home-bg{
+    background-image: url(/static/images/blog-bg.png)
+}
+#bg{
+    width: 100%;
+    height: auto;
+}
+div #footer.row{
+    margin-top: 1%;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding: 0 30% 0 30%;;
    
 }
-
-
-
-
-#blog-body-limit{
-    max-height: 200px;
+nav.navbar.navbar-expand-xl.navbar-dark.bg-primary{
+    width: 100%;
+    border: 2px solid #0069D9;
+    background: white;
 }
 
+.navbar-dark .navbar-nav .nav-link {
+    color: #0069D9;
+}
+.navbar-dark .navbar-brand{
+    color: #0069D9;
+}
+.navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link {
+    color: #0069D9;
+}
+.bg-primary {
+    background-color: #CDFBF8!important;
+}
+.form-control{
+    border: 1px solid #0069D9;
 
-img.card-img {
-    width: 330px;
-    height: 190px;
+}
+input #accept_tos.form-control{
+    border: 1px solid #0069D9;
 }
 
-.signup, .login {
-    margin: 100px 100px 100px 100px;
+#cke_editor{
+    border: 1px solid #0069D9;
 }
+
 /* sky blue youtube tutorial on sticky social media */
 .icon-bar {
   position: fixed;
@@ -294,8 +167,3 @@ img.card-img {
 }
 
 /* end of sky blue */
-
- #add_blog, #edit_blog,#users-signup,#users-login{
-    padding-left: 200px;
-}
-
