--- a/templates/add_blog.html
+++ b/templates/add_blog.html
@@ -27,6 +27,6 @@
      <div class="form-group" style="max-width:500px;">
         {{render_field(form.img_src, class="form-control", id="blog_img_src" )}}
 	</div>
-    <input type="submit" value="Add Blog" class="btn btn-primary">	
+    <input type="submit" value="Add Blog" class="btn btn-outline-primary">	
 </form>
 {% endblock %}
