--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -1,13 +1,15 @@
 {% extends 'base.html'%}
 {% block content %}
 <h2>{{page_title}}</h2>
+{% if session.logged_in %}
 <p>You are logged on to your workspace {{session.username  }}</p>
+{% endif %}
 {% for blog in blogs|sort(reverse=true,attribute='_id') %}
 {% if loop.index % 2 != 0 %}
-<div class="card mb-3" id="blogs" style="max-width:1000px;">
+<div class="card mb-3 border-primary" id="blogs" style="max-width:1000px;">
    <div class="row no-gutters">
       <div class="col-md-4">
-         <img src="{{ blog.img_src }}" class="card-img" alt="...">
+         <img src="{{ blog.img_src }}" class="card-img d-none d-md-block" alt="...">
       </div>
       <div class="col-md-8">
          <div class="card-body" >
@@ -20,7 +22,7 @@
    </div>
 </div>
 {% else %}
-<div class="card mb-3" style="max-width: 1000px;">
+<div class="card mb-3 border-primary" style="max-width: 1000px;">
    <div class="row no-gutters">
       <div class="col-md-8">
          <div class="card-body" >
@@ -31,7 +33,7 @@
          </div>
       </div>
       <div class="col-md-4">
-         <img src="{{ blog.img_src }}" class="card-img" alt="...">
+         <img src="{{ blog.img_src }}" class="card-img d-none d-md-block" alt="...">
       </div>
    </div>
 </div>
