--- a/templates/edit.html
+++ b/templates/edit.html
@@ -2,15 +2,15 @@
 {% block content %}
 <h2>{{page_title}}</h2>
 <p>You are logged on to your workspace {{session.username }}</p>
-<a class=" btn btn-primary" href="/add_blog">Add Blog </a>
+<a class=" btn btn-outline-primary" href="/add_blog">Add Blog </a>
 <br>
 <hr>
 {% for blog in blogs|sort(reverse=true,attribute='_id') %}
 {% if loop.index % 2 !=0 %}
-<div class="card mb-3" style="max-width: 1000px;">
+<div class="card mb-3 border-primary" style="max-width: 1000px;">
    <div class="row no-gutters">
       <div class="col-md-4">
-         <img src="{{ blog.img_src }}" class="card-img" alt="...">
+         <img src="{{ blog.img_src }}" class="card-img d-none d-md-block" alt="...">
       </div>
       <div class="col-md-8">
          <div class="card-body">
@@ -26,7 +26,7 @@
    </div>
 </div>
 {% else %}
-<div class="card mb-3" style="max-width: 1000px;">
+<div class="card mb-3 border-primary" style="max-width: 1000px;">
    <div class="row no-gutters">
       <div class="col-md-8">
          <div class="card-body">
@@ -40,7 +40,7 @@
          </div>
       </div>
       <div class="col-md-4">
-         <img src="{{ blog.img_src }}" class="card-img" alt="...">
+         <img src="{{ blog.img_src }}" class="card-img d-none d-md-block" alt="...">
       </div>
    </div>
 </div>
