just a bootstrap btn class added

--- a/templates/edit_blog.html
+++ b/templates/edit_blog.html
@@ -28,7 +28,7 @@
      <div class="form-group" style="max-width:500px;">
         {{render_field(form.img_src, class="form-control", id="blog_img_src")}}
 	</div>
-    <input type="submit" value="Update Blog" class="btn btn-primary">	
+    <input type="submit" value="Update Blog" class="btn btn-outline-primary">	
 </form>
 {% endfor %}
 {% endblock %}
