bg image for home

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,6 @@
 {% extends 'base.html'%}
 {% block content %}
+<div id="home-bg">
+    <img src="static/images/blog-bg.png" id="bg">
+</div>
 {% endblock %}
