--- a/templates/login.html
+++ b/templates/login.html
@@ -18,6 +18,6 @@
     <div class="form-group" style="max-width:500px;">
         {{render_field(form.password, class="form-control" )}}
 	</div>
-    <input type="submit" value="Login" class="btn btn-primary">	
+    <input type="submit" value="Login" class="btn btn-outline-primary">	
 </form>
 {% endblock %}
