--- a/templates/signup.html
+++ b/templates/signup.html
@@ -30,7 +30,7 @@
     <div class="form-group" style="max-width:500px;">
        {{render_field(form.accept_tos, class="form-control", id="accept_tos")}} 
 	</div>
-    <input type="submit" value="Register" class="btn btn-primary">	
+    <input type="submit" value="Register" class="btn btn-outline-primary">	
 </form>
 {% endblock %}
 
